--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,8 +21,14 @@ appcompat = "1.7.0"
 annotation = "1.9.1"
 runtimeVersion = "1.8.2"
 material = "1.12.0"
-koin-bom = "4.0.3"
-ktor-bom = "3.1.3"
+koinBom = "4.0.3"
+ktorBom = "3.1.3"
+firebaseBom = "33.14.0"
+firebaseAuth = "23.2.1"
+playServicesAuth = "21.3.0"
+googleServices = "4.4.2"
+dataStore = "1.1.7"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -34,6 +40,7 @@ androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecyc
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 compose-navigation = { module = "androidx.navigation:navigation-compose", version.ref = "composeNavigation" }
+androidx-datastore = { module = "androidx.datastore:datastore-preferences", version.ref = "dataStore" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
@@ -46,14 +53,14 @@ androidx-animation = { group = "androidx.compose.animation", name = "animation" 
 androidx-animation-core = { group = "androidx.compose.animation", name = "animation-core" }
 androidx-animation-graphics = { group = "androidx.compose.animation", name = "animation-graphics" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
-koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
+koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koinBom" }
 koin-core = { module = "io.insert-koin:koin-core" }
 koin-core-coroutines = { module = "io.insert-koin:koin-core-coroutines" }
 koin-android = { module = "io.insert-koin:koin-android" }
 koin-app-startup = { module = "io.insert-koin:koin-androidx-startup" }
 koin-compose = { module = "io.insert-koin:koin-compose" }
 koin-navigation = { module = "io.insert-koin:koin-androidx-compose-navigation" }
-ktor-bom = { module = "io.ktor:ktor-bom", version.ref = "ktor-bom" }
+ktor-bom = { module = "io.ktor:ktor-bom", version.ref = "ktorBom" }
 ktor-android = { module = "io.ktor:ktor-client-android" }
 ktor-serialization = { module = "io.ktor:ktor-client-serialization" }
 ktor-logging = { module = "io.ktor:ktor-client-logging" }
@@ -69,6 +76,11 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 annotation = { module = "androidx.annotation:annotation", version.ref = "annotation" }
 runtime = { module = "androidx.compose.runtime:runtime", version.ref = "runtimeVersion" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-auth-ktx = { group = "com.google.firebase", name = "firebase-auth-ktx", version.ref = "firebaseAuth" }
+play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
+firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics-ktx" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics-ktx" }
 
 
 [plugins]
@@ -79,6 +91,7 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 jetbrainsKotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+google-services = { id = "com.google.gms.google-services", version.ref = "googleServices" }
 
 
 [bundles]
@@ -112,4 +125,9 @@ ktor = [
     "ktor-logging",
     "ktor-content-negotiation",
     "ktor-json"
+]
+
+firebase = [
+    "firebase-bom",
+    "firebase-analytics",
 ]
